--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".action.user.SignUpActivity">
+        <activity android:name=".action.user.SignUpActivity" />
+        <activity android:name=".action.Societe.SocieteCreateActivity">
+
+        </activity>
+        <activity
+            android:name=".action.Societe.SocieteListActivity"
+            android:label="@string/title_activity_societe_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".action.Societe.SocieteMenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".action.MainActivity"
+            android:label="@string/app_name"></activity>
     </application>
 
 </manifest>
