--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sharpinfo.sir.gestionprojet_v2.action.user.SignInActivity" />
         </activity>
-
-        <activity android:name=".action.Societe.SocieteCreateActivity"></activity>
+        <activity android:name=".action.Societe.SocieteCreateActivity" />
         <activity
             android:name=".action.Societe.SocieteListActivity"
             android:label="@string/title_activity_societe_list"
@@ -34,14 +33,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sharpinfo.sir.gestionprojet_v2.action.Societe.SocieteMenuActivity" />
         </activity>
-
-        <activity android:name=".action.Societe.SocieteMenuActivity">
-
-        </activity>
+        <activity android:name=".action.Societe.SocieteMenuActivity" />
         <activity
             android:name=".action.MainActivity"
             android:label="@string/app_name" />
-
+        <activity
+            android:name=".action.SideMenuActivity"
+            android:label="@string/title_activity_side_menu"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".action.TestChartActivity"></activity>
     </application>
 
 </manifest>
