--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,11 +32,11 @@
         <activity
             android:name=".action.societe.SocieteListActivity"
             android:label="@string/title_activity_societe_list"
-            android:parentActivityName=".action.menu.MenuActivity"
+            android:parentActivityName=".action.menu.SideMenuActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.MenuActivity" />
+                android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
         </activity>
         <activity android:name=".action.menu.MenuActivity" />
         <activity
@@ -50,13 +50,22 @@
         <activity
             android:name=".action.projet.ProjetListActivity"
             android:label="@string/title_activity_projet_list"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:parentActivityName=".action.menu.SideMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
+        </activity>
         <activity android:name=".action.depense.DepenseCreateActivity" />
         <activity
             android:name=".action.depense.DepenseListActivity"
             android:label="Expenses List"
             android:parentActivityName=".action.menu.SideMenuActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
+        </activity>
         <activity android:name=".action.projet.ProjetCreateActivity"></activity>
     </application>
 
