--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,24 +67,23 @@
         <activity
             android:name=".action.tache.TacheListActivity"
             android:label="Tasks list"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:parentActivityName=".action.menu.SideMenuActivity">
+            android:parentActivityName=".action.menu.SideMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
         </activity>
-
-
-            android:theme="@style/AppTheme.NoActionBar" />
+        android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".action.menu.EditProfileActivity"
-            android:parentActivityName=".action.menu.SideMenuActivity"></activity>
+            android:parentActivityName=".action.menu.SideMenuActivity" />
         <activity
             android:name=".action.menu.ChangePasswordActivity"
-            android:parentActivityName=".action.menu.SideMenuActivity"></activity>
+            android:parentActivityName=".action.menu.SideMenuActivity" />
         <activity
             android:name=".action.menu.AboutActivity"
-            android:parentActivityName=".action.menu.SideMenuActivity"></activity>
+            android:parentActivityName=".action.menu.SideMenuActivity" />
+        <activity android:name=".action.statistics.StatisticsMenuActivity"></activity>
     </application>
 
 </manifest>
