added more societe stats

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,7 +78,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
         </activity>
-        android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".action.menu.EditProfileActivity"
             android:parentActivityName=".action.menu.SideMenuActivity" />
@@ -88,10 +87,18 @@
         <activity
             android:name=".action.menu.AboutActivity"
             android:parentActivityName=".action.menu.SideMenuActivity" />
-        <activity android:name=".action.statistics.StatisticsMenuActivity" />
+        <activity android:name=".action.statistics.StatisticsMenuActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sharpinfo.sir.gestionprojet_v2.action.menu.SideMenuActivity" />
+        </activity>
         <activity android:name=".action.HamzaTestChartActivity" />
         <activity android:name=".action.HamzaTestChart2Activity" />
-        <activity android:name=".action.statistics.SocieteStatisticsActivity"></activity>
+        <activity android:name=".action.statistics.SocieteStatisticsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.sharpinfo.sir.gestionprojet_v2.action.statistics.StatisticsMenuActivity" />
+        </activity>
     </application>
 
 </manifest>
