--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:label="@string/app_name" />
         <activity
             android:name=".action.menu.SideMenuActivity"
-            android:label="Welcome to SHARPROJECTS"
+            android:label="Welcome to Expert Projects"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".action.statistics.ProjetStatisticsActivity"
