--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.sharpinfo.sir.gestionprojet_v2">
 
+
+    <uses-permission android:name="android.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -141,6 +145,8 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
+        <receiver android:name=".action.notification.NotificationReceiver" />
     </application>
 
 </manifest>
