added notifications and fixed minor bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -147,6 +147,9 @@
         </activity>
 
         <receiver android:name=".action.notification.NotificationReceiver" />
+        <receiver android:name=".action.notification.NotificationReceiverDepense" />
+        <receiver android:name=".action.notification.NotificationReceiverTache" />
+        <receiver android:name=".action.notification.NotificationReceiverDayStart" />
     </application>
 
 </manifest>
